argocd-gke-terraform-tutorial/app/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app
  labels:
    app: fastapi-app
spec:
  selector:
    app: fastapi-app
  ports:
    - port: 80        # クライアントがアクセスするポート（サービス側）
      targetPort: 8000 # Podのコンテナポート
  type: LoadBalancer   # 外部負荷分散IPを割り当て
